; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/xen/extr_enlighten.c_xen_load_idt.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/xen/extr_enlighten.c_xen_load_idt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.trap_info = type { i32 }
%struct.desc_ptr = type { i32 }

@xen_load_idt.lock = internal global i32 0, align 4
@xen_load_idt.traps = internal global [257 x %struct.trap_info] zeroinitializer, align 16
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.desc_ptr*)* @xen_load_idt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xen_load_idt(%struct.desc_ptr* %0) #0 {
  %2 = alloca %struct.desc_ptr*, align 8
  %3 = alloca %struct.desc_ptr, align 4
  store %struct.desc_ptr* %0, %struct.desc_ptr** %2, align 8
  %4 = call i32 @spin_lock(i32* @xen_load_idt.lock)
  %5 = load %struct.desc_ptr*, %struct.desc_ptr** %2, align 8
  %6 = bitcast %struct.desc_ptr* %3 to i8*
  %7 = bitcast %struct.desc_ptr* %5 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %6, i8* align 4 %7, i64 4, i1 false)
  %8 = load %struct.desc_ptr*, %struct.desc_ptr** %2, align 8
  %9 = call i32 @xen_convert_trap_info(%struct.desc_ptr* %8, %struct.trap_info* getelementptr inbounds ([257 x %struct.trap_info], [257 x %struct.trap_info]* @xen_load_idt.traps, i64 0, i64 0))
  %10 = call i32 (...) @xen_mc_flush()
  %11 = call i64 @HYPERVISOR_set_trap_table(%struct.trap_info* getelementptr inbounds ([257 x %struct.trap_info], [257 x %struct.trap_info]* @xen_load_idt.traps, i64 0, i64 0))
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %1
  %14 = call i32 (...) @BUG()
  br label %15

15:                                               ; preds = %13, %1
  %16 = call i32 @spin_unlock(i32* @xen_load_idt.lock)
  ret void
}

declare dso_local i32 @spin_lock(i32*) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i32 @xen_convert_trap_info(%struct.desc_ptr*, %struct.trap_info*) #1

declare dso_local i32 @xen_mc_flush(...) #1

declare dso_local i64 @HYPERVISOR_set_trap_table(%struct.trap_info*) #1

declare dso_local i32 @BUG(...) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
